--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			c.height = window.innerHeight;
 			c.width = window.innerWidth;
 
-			var txts = "052あ7B8い甘GANE士CHENG成う1え9お甘かき士くけこ成EFCADG甘HIJK士LMNO成PQRSTU甘VWXYZE士FCADGH成IJKLM";
+			var txts = "方远远快~~起床方远远~快起床方~远远是猪";
 			txts = txts.split("");
 
 			var font_size = 28;
