--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="Refresh" Content="10; ./welcome.html">
 
-<title>The ZhiSheng's Website</title>
+<title>赶紧起床别墨迹</title>
 <style type="text/css">
     canvas {display: block;}
 	html
@@ -30,7 +30,7 @@
 
 			c.addEventListener('click', function(e)
 			{
-				location.href="./welcome.html";
+				location.href="www.fghy.me";
 			}, false);
 
 			//全屏显示
