--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="Refresh" Content="10; ./welcome.html">
 
-<title>哈哈</title>
+<title>hello，2017</title>
 <style type="text/css">
     canvas {display: block;}
 	html
@@ -37,7 +37,7 @@
 			c.height = window.innerHeight;
 			c.width = window.innerWidth;
 
-			var txts = "小店菜鸡黄俊";
+			var txts = "我的Blog";
 			txts = txts.split("");
 
 			var font_size = 60;
