--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			c.height = window.innerHeight;
 			c.width = window.innerWidth;
 
-			var txts = "我的Blog";
+			var txts = "二狗子";
 			txts = txts.split("");
 
 			var font_size = 60;
